13 September 2012: Matthijs
- OPENDNSSEC-330: NSEC3PARAM TTL should be set to zero.

12 September 2012: Matthijs
- Code review Ondrej Sury.

6 September 2012: Matthijs
- OPENDNSSEC-325: Don't include RRSIG records when DO bit is not set.
- OPENDNSSEC-326: Stop serving a zone that could not be transferred from master
  and has been expired.

5 September 2012: Matthijs
- OPENDNSSEC-318: Don't stop dns and xfr handlers if these threads have not
  yet been started.
- OPENDNSSEC-319: Fix TSIG segfault on signer shutdown.

4 September 2012: Matthijs
- OPENDNSSEC-320: The <ProvideTransfer>, <Notify>, <AllowNotify> and
  <RequestTransfer> elements are now optional, but if provided they require
  one or more <Peer> or <Remote> elements.

28 August 2012: Matthijs
- Fix resource leaks and code ineffeciences.

9 August 2012: Matthijs
- More sophisticated wait() on execvp().

8 August 2012: Matthijs
- OPENDNSSEC-304: Split check pidfile and write pidfile. So that we can exit
more early. Also, doing it early, the error will end up in stderr. Is nicer
than in syslog.

7 August 2012: Matthijs
- Fix serial check, so that signer does not retry fetch a newer zone if
  serial on disk and serial in memory are equal.

6 August 2012: Matthijs
- Replace system() function call with execvp().

2 August 2012: Matthijs
- Better error message when reading large zone file (OPENDNSSEC-261)
- Explicit shutdown to ods-signer client to prevent hanging clients
- Added warning messages when serial unixtime or datecounter cannot be used.

30 July 2012: Matthijs
- Make random_id() more random.

24 July 2012: Matthijs
- Fix assertion error when printing signed zone with empty non-terminals
  and NSEC.

23 July 2012: Matthijs
- OPENDNSSEC-304: Check pidfile on startup, complain and exit if pidfile
  exists and corresponding process is running.

6 July 2012: Matthijs
- OPENDNSSEC-269: Fix crash in ldns_rr_list_push_rr() due to missing lock
  in ixfr structure.

28 June 2012: Matthijs