@@ -261,7 +261,7 @@ lhsm_sign_start:
     params->inception = inception;
     params->expiration = expiration;
     params->keytag = ldns_calc_keytag(key_id->dnskey);
-    ods_log_debug("[%s] sign RRset[%i] with key %s tag %u", hsm_str,
+    ods_log_deeebug("[%s] sign RRset[%i] with key %s tag %u", hsm_str,
         ldns_rr_get_type(ldns_rr_list_rr(rrset, 0)),
         key_id->locator?key_id->locator:"(null)", params->keytag);
     result = hsm_sign_rrset(ctx, rrset, key_id->hsmkey, params);
