@@ -38,9 +38,11 @@
 
 enum ods_enum_status {
     ODS_STATUS_OK,
-    ODS_STATUS_ASSERT_ERR,
+    ODS_STATUS_EOF,
     ODS_STATUS_NOTIMPL,
+    ODS_STATUS_UPTODATE,
 
+    ODS_STATUS_ASSERT_ERR,
     ODS_STATUS_CFG_ERR,
     ODS_STATUS_CHDIR_ERR,
     ODS_STATUS_CHROOT_ERR,
@@ -56,6 +58,7 @@ enum ods_enum_status {
     ODS_STATUS_INSECURE,
     ODS_STATUS_MALLOC_ERR,
     ODS_STATUS_RENAME_ERR,
+    ODS_STATUS_UNLINK_ERR,
 
     ODS_STATUS_SOCK_BIND,
     ODS_STATUS_SOCK_FCNTL_NONBLOCK,
